# CLIP-GP

./: .gitignore  DATASETS.md  Dassl_transition.md  LICENSE  PHASE1_SUMMARY.md  README.md  analyze_experiment.py  analyze_gp_tuning.py  analyze_transfer_results.py  baseline.sh  baseline_metrics.csv  experiments.md  gp_template_weigher.py  migrate_datasets.py  notes.md  parse_baseline_logs.py  parse_experiment_results.py  pyproject.toml  requirements.txt  run_experiment.sh  test.ipynb  train.py  visual_proj_stats_by_dataset_and_shots.csv  visual_proj_stats_by_shots.csv
clip/: clip.py
datasets/: __init__.py  caltech101.py  dtd.py  eurosat.py  fgvc_aircraft.py  food101.py  imagenet.py  imagenet_a.py  imagenet_r.py  imagenet_sketch.py  imagenetv2.py  oxford_flowers.py  oxford_pets.py  stanford_cars.py  sun397.py  ucf101.py
gp_test_v3/: gp_test_v3_63191208_1.out  gp_test_v3_63191208_2.out  gp_test_v3_63263285_1.out  gp_test_v3_63263285_2.out
scripts/: adapt.sh  aggregate_results.py  analyze_comprehensive_results.py  baseline.sh  baseline_clap_variants.sh  baseline_improved.sh  cross_dataset_eval.sh  cross_dataset_transfer.sh  eval.sh  few_shot_baseline.sh  few_shot_domain_adaptation.sh  general_hyperparam_tuning.sh  gp_hyperparam_tuning.sh  gp_test.sh  gp_test_simple.sh  grid_oxford_pets.sh  local_test.sh  plot_reliability.py  quick_check.py  quick_gp_test.sh  run_baseline.sh  run_big_tests.sh  run_comparison.sh  run_experiment.sh  run_finetune.sh  run_gp.sh  run_search.sh  single_test.sh  test.sh  test_gp_simple.sh
trainers/: __init__.py  adapter.py  adapter_cocoop.py  (+13 more)
(+62 files in other folders)
